--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "d3-color": "^3.1.0",
+    "d3-interpolate": "^3.0.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-liquid-gauge": "^1.2.4"
   },
   "devDependencies": {
     "eslint": "8.13.0",
