--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-liquid-gauge": "^1.2.4"
+    "react-liquid-gauge": "^1.2.4",
+    "react-wavify": "^1.5.7"
   },
   "devDependencies": {
     "eslint": "8.13.0",
