--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "axios": "^0.26.1",
+    "cookie-cutter": "^0.2.0",
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "next": "12.1.5",
