--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.0.0",
     "react-liquid-gauge": "^1.2.4",
     "react-minimal-pie-chart": "^8.3.0",
-    "react-wavify": "^1.5.7"
+    "react-wavify": "^1.5.7",
+    "string-to-color": "^2.2.2"
   },
   "devDependencies": {
     "eslint": "8.13.0",
