--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "cookie-cutter": "^0.2.0",
     "d3-color": "^3.1.0",
     "d3-interpolate": "^3.0.1",
+    "moment": "^2.29.3",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-chartjs-2": "^4.1.0",
